--- a/css/style.css
+++ b/css/style.css
@@ -116,8 +116,9 @@ Import fonts
 /******************************************************************
 General CSS
 ******************************************************************/
-									
-#content {
+
+#header {
+	position: relative;
 	width: 900px;
 	padding-top: 20px;
 	padding-left: 15px;
@@ -125,6 +126,14 @@ General CSS
 	z-index: 1;
 }
 
+#content {
+	position:relative;
+	width: 900px;
+	padding-top: 20px;
+	padding-left: 15px;
+	margin-left: 300px;
+	z-index: 1;
+}
 
 .tab-content {
 	overflow: hidden;
@@ -137,7 +146,11 @@ p {
 	font-family: Apud-Roman;
 	line-height: 2em;
 	color: #1c1a1a;
-	font-size: 11pt;
+	font-size: 12pt;
+}
+
+b {font-family: Apud-Black;
+font-weight:bold;
 }
 
 p2 {
@@ -157,7 +170,7 @@ p3 {
 
 h1 {
 	font-family: 'Droid Serif', Apud-Black, sans-serif;
-	line-height: 1.5em;
+	line-height: 1em;
 	color: #b22525;
 	text-decoration: none;
 	font-size: 22pt;
@@ -198,7 +211,28 @@ h6 {
 	font-size: 10pt;
 }
 
-sup {font-size:xx-small; vertical-align:super;}
+sup {
+    font-size:xx-small; vertical-align:super;
+}
+
+
+  #myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+  background:none;
+}
+
+
 /******************************************************************
 Menu CSS
 ******************************************************************/
@@ -210,7 +244,7 @@ Menu CSS
   min-height: 2rem;
   line-height: 3rem;
   padding: 0 1rem;
-  font-size: 20pt;
+  font-size: 15pt;
 
 }
 
@@ -225,6 +259,7 @@ Menu CSS
 
 
 #menu-wrapper {
+	position:relative;
 	height: 100%;
 	padding-top: 50px;
 	float: left;
@@ -234,8 +269,9 @@ Menu CSS
 #main-menu {
 	position: fixed;
 	width: 250px;
-	padding-top: 80px;
+	padding-top: 50px;
 	padding-right: 30px;
+	padding-left:20px;
 	background-color: #f0f0f0;
 	font-family: 'Droid Serif', Apud-Medium, sans-serif;
 	overflow-y: scroll;
@@ -243,7 +279,9 @@ Menu CSS
   	bottom: 0;
   	left:0;
 	word-wrap: break-word;
-	z-index: 2;
+	z-index:2;
+
+
 }
 
 #main-menu li {
@@ -259,32 +297,6 @@ Menu CSS
 	color: #b22525;
 }
 
-
-/******************************************************************
-Some Nivo Customization CSS
-For easy editing (the main Nivo CSS is in nivo-theme.css)
-******************************************************************/
-
-.theme-effe .nivo-caption {
-	font-family: Verdana, Arial, sans-serif;
-	font-size: 14px;
-}
-.theme-effe .nivo-caption h1 {
-	padding: 50px 10px 5px 10px;
-}
-.theme-effe .nivo-caption p {
-	padding: 5px 20px 20px 20px;
-	text-align: justify;
-}
-.theme-effe .nivo-caption .readmore {
-	position: absolute;
-	font-family: Verdana, Arial, sans-serif;
-	font-size: 16px;
-	color: #999;
-	text-decoration: none;
-	bottom: 20px;
-	left: 160px;
-}
 
 /******************************************************************
 Dividers
@@ -353,7 +365,7 @@ Tables and graphs
   padding: 18px;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 12pt;
   font-family: 'Droid Serif', Apud-Medium, sans-serif;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   margin: 20px;
@@ -376,7 +388,7 @@ Tables and graphs
 #content .collapsible:after {
   content: '\002B';
   color: #555555;
-  font-size: 20px;
+  font-size: 20pt;
   font-weight: bold;
   float: right;
   margin-left: 5px;
@@ -422,7 +434,7 @@ Tables and graphs
 .styled-table {
     border-collapse: collapse;
     margin: 30px 30px;
-    font-size: 0.9em;
+    font-size: 12pt;
     font-family: Apud-Roman;
     min-width: 650px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -456,12 +468,6 @@ Tables and graphs
     background: #f3f3f3;
 }
 
-.tableauPlaceholder {	z-index: 1;
-        content: none;
+.tableauPlaceholder {
+z-index: 1;
 	margin:10px;
-}
-
-.header-table {
-	width:100%;
-}
-	
